--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
         </section>
 
-        <h2 class="section-heading">cake n bake, sandbanks road, vatakara</h2>
+        <h2 class="section-heading-map">cake n bake, sandbanks road, vatakara</h2>
 
         <section id="section-source">
             <!--<p>
