--- a/contactus.html
+++ b/contactus.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>GTCoding</title>
+  <title>CakeNBake</title>
 </head>
 
 <body>
@@ -19,10 +19,10 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a  href="blogslist.html">Blog</a>
+              <a  href="shopnow.html">Shop Now</a>
           </li>
           <li>
-              <a href="blogslist.html">Projects</a>
+              <a href="contactus.html">Contact Us</a>
           </li>
           <li>
               <a href="about.html">About</a>
@@ -36,7 +36,7 @@
   <nav>
       <div id="logo-img">
           <a href="#">
-              <img src="img/logo.png" alt="GTCoding Logo">
+              <img src="img/logo.png" alt="Cake N Bake Logo">
           </a>
       </div>
       <div id="menu-icon">
@@ -47,10 +47,10 @@
               <a href="index.html">Home</a>
           </li>
           <li>
-              <a class="active" href="blogslist.html">Blog</a>
+              <a href="shopnow.html">Shop Now</a>
           </li>
           <li>
-              <a href="blogslist.html">Projects</a>
+              <a class="active" href="contactus.html">Contact Us</a>
           </li>
           <li>
               <a href="about.html">About</a>
@@ -69,19 +69,19 @@
 
   <main>
 
-    <h2 class="page-heading">Black Forest Cake</h2>
+    <h2 class="page-heading">Contact Us</h2>
     <div id="post-container">
       <section id="blogpost">
         <div class="card">
           <div class="card-meta-blogpost">
-            Posted by Admin on 01/01/2018 in
-            <a href="#">Web Dev</a>
+            Posted by Admin - this page is under maintanance
+            <a id="contact-admin" href="http://www.instagram.com/younuz.__/">contact admin</a>
           </div>
           <div class="card-image">
-            <img src="img/1.jpg" alt="Card Image">
+            <img src="img/background.jpg" alt="Card Image">
           </div>
           <div class="card-description">
-            <h3>Home made Black Forest Cake</h3>
+            <h3>Cake N Bake Home Made Cakes Vatakara</h3>
             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique omnis fugiat sapiente corrupti iure vitae
               tempora magnam laboriosam eligendi voluptatem? Quisquam similique officia eum? Ullam ex iste in officia eveniet
               blanditiis quae iure ducimus explicabo dicta molestias, reiciendis quidem unde.</p>
@@ -95,7 +95,7 @@
         </div>
 
         <div id="comments-section">
-          Comments Section
+          <!--Comments Section-->
         </div>
       </section>
 
@@ -114,20 +114,20 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
+                        <a href="shopnow.html">Shop Now</a>
+                    </li>
+                    <!--<li>
+                        <a href="#">Privacy Policy</a>
+                    </li>-->
+                    <li>
+                        <a href="contactus.html">Contact Us</a>
+                    </li>
+                    <li>
                         <a href="about.html">About</a>
                     </li>
-                    <li>
-                        <a href="#">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a href="blogslist.html">Blogs</a>
-                    </li>
-                    <li>
-                        <a href="blogslist.html">Projects</a>
-                    </li>
-                    <li>
+                    <!--<li>
                         <a href="#">Contact</a>
-                    </li>
+                    </li>-->
                 </ul>
             </p>
         </div>
@@ -137,11 +137,11 @@
             <div id="social-media-footer">
                 <ul>
                     <li>
-                        <a href="#">
-                            <i class="fab fa-facebook"></i>
+                        <a href="https://www.instagram.com/cake_.n._bake/">
+                            <i class="fab fa-instagram"></i>
                         </a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a href="#">
                             <i class="fab fa-youtube"></i>
                         </a>
@@ -150,10 +150,10 @@
                         <a href="#">
                             <i class="fab fa-github"></i>
                         </a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
-            <p>This website is developed by GTCoding</p>
+            <p>This website is developed by YOUNUZBN</p>
         </div>
     </footer>
 
