--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                         cum distinctio pariatur ipsa quod, odit dolorum non vero recusandae? Corporis voluptatem optio nulla.
                     </p> -->
                     <a href="tel:+917356126678" class="btn-readmore">Order Now</a>
+
+<a href="tel:+917356126678" class="btn-readmore">Order Now</a>
+
                 </div>
             </div>
 
