--- a/index.html
+++ b/index.html
@@ -93,10 +93,7 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, ullam facilis consequuntur eligendi sit accusamus tempora
                         cum distinctio pariatur ipsa quod, odit dolorum non vero recusandae? Corporis voluptatem optio nulla.
                     </p> -->
-                    <a href="tel:+917356126678" class="btn-readmore">Order Now</a>
-
-<a href="tel:+917025035624" class="btn-readmore">Order Now</a>
-
+                    <a href="tel:+917356126678" href="tel:+917025035624" class="btn-readmore">Order Now</a>
                 </div>
             </div>
 
