--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, ullam facilis consequuntur eligendi sit accusamus tempora
                         cum distinctio pariatur ipsa quod, odit dolorum non vero recusandae? Corporis voluptatem optio nulla.
                     </p> -->
-                    <a href="tel:+917356126678" class="btn-readmore">Order Now</a>
+                    <a href="tel:+917356126678" class="btn-readmore">📞 Order Now</a>
                 </div>
             </div>
 
@@ -112,7 +112,7 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, ullam facilis consequuntur eligendi sit accusamus tempora
                         cum distinctio pariatur ipsa quod, odit dolorum non vero recusandae? Corporis voluptatem optio nulla.
                     </p>-->
-                    <a href="tel:+917356126678" class="btn-readmore">Order Now</a>
+                    <a href="tel:+917356126678" class="btn-readmore">📞 Order Now</a>
                 </div>
             </div>
         <!--</section>
@@ -137,7 +137,7 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, ullam facilis consequuntur eligendi sit accusamus tempora
                         cum distinctio pariatur ipsa quod, odit dolorum non vero recusandae? Corporis voluptatem optio nulla.
                     </p>-->
-                    <a href="tel:+917356126678" class="btn-readmore">Order Now</a>
+                    <a href="tel:+917356126678" class="btn-readmore">📞 Order Now</a>
                 </div>
             </div>
 
@@ -156,12 +156,12 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, ullam facilis consequuntur eligendi sit accusamus tempora
                         cum distinctio pariatur ipsa quod, odit dolorum non vero recusandae? Corporis voluptatem optio nulla.
                     </p>-->
-                    <a href="tel:+917356126678" class="btn-readmore">Order Now</a>
+                    <a href="tel:+917356126678" class="btn-readmore">📞 Order Now</a>
                 </div>
             </div>
         </section>
 
-        <h2 class="section-heading-map">cake n bake, sandbanks road, vatakara</h2>
+        <a href="https://goo.gl/maps/4B6qbn6UbspmKQ8P8" class="btn-readmore">📍 cake n bake, sandbanks road, vatakara</a>
 
         <section id="section-source">
             <!--<p>
