--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="contactus.html">Contact Us</a>
             </li>
             <li>
-                <a href="index.html">About</a>
+                <a href="index.html">about</a>
             </li>
             <li>
                 <input type="text" placeholder="Search Here">
