layout n logo changed

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
     </div>
 
     <div id="banner">
-        <h1>Cake N Bake</h1>
+        <img src="img/logo1.png" width="60%" alt="logo">
         <h3>Home Made Cakes</h3>
+        
     </div>
 
     <main>
