body color changed

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <li>
                 <a href="index.html">about</a>
             </li>
-            <li>
+            <!--<li>
                 <input type="text" placeholder="Search Here">
-            </li>
+            </li>-->
         </ul>
     </div>
 
@@ -163,7 +163,7 @@
             </div>
         </section>
 
-        <a href="https://goo.gl/maps/4B6qbn6UbspmKQ8P8" class="btn-readmore">📍 cake n bake, sandbanks road, vatakara</a>
+        <a href="https://goo.gl/maps/4B6qbn6UbspmKQ8P8" class="btn-readmore-map">📍 cake n bake, sandbanks road, vatakara</a>
 
         <section id="section-source">
             <!--<p>
