bd color changed

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             <img src="img/background.jpg" alt="Card Image">
           </div>
           <div class="card-description">
-            <h3>Cake N Bake Home Made Cakes Vadakara</h3>
+            <h3>Cake N Bake Home Made Cakes Vatakara</h3>
             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique omnis fugiat sapiente corrupti iure vitae
               tempora magnam laboriosam eligendi voluptatem? Quisquam similique officia eum? Ullam ex iste in officia eveniet
               blanditiis quae iure ducimus explicabo dicta molestias, reiciendis quidem unde.</p>
