--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
     </div>
 
     <div id="banner">
-        <img src="img/logo1.png" width="60%" alt="logo">
+        <h1>Cake N Bake</h1>
         <h3>Home Made Cakes</h3>
-        
     </div>
 
     <main>
