--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Cake N Bake</title>
+    <title>Cake N Bake Vadakara</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
     <nav>
         <div id="logo-img">
             <a href="#">
-                <img src="img/logo.png" alt="Cake N Bake Logo">
+                <img src="img/logo.png" alt="Cake N Bake Vadakara">
             </a>
         </div>
 
@@ -83,7 +83,7 @@
             <div class="card">
                 <div class="card-image">
                     <a href="shopnow.html">
-                        <img src="img/1.jpg" alt="Card Image">
+                        <img src="img/1.jpg" alt="Homemade Cakes">
                     </a>
                 </div>
 
