--- a/contactus.html
+++ b/contactus.html
@@ -12,7 +12,7 @@
   <title>CakeNBake</title>
 </head>
 
-<body>
+<body id="body1">
   <div id="slideout-menu">
       <ul>
           <li>
@@ -67,96 +67,22 @@
       <input type="text" placeholder="Search Here">
   </div>
 
-  <main>
-
-    <h2 class="page-heading">Contact Us</h2>
-    <div id="post-container">
-      <section id="blogpost">
-        <div class="card">
-          <div class="card-meta-blogpost">
-            Posted by Admin - this page is under maintanance
-            <a id="contact-admin" href="http://www.instagram.com/younuz.__/">contact admin</a>
-          </div>
-          <div class="card-image">
-            <img src="img/background.jpg" alt="Card Image">
-          </div>
-          <div class="card-description">
-            <h3>Cake N Bake Home Made Cakes Vatakara</h3>
-            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique omnis fugiat sapiente corrupti iure vitae
-              tempora magnam laboriosam eligendi voluptatem? Quisquam similique officia eum? Ullam ex iste in officia eveniet
-              blanditiis quae iure ducimus explicabo dicta molestias, reiciendis quidem unde.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique omnis fugiat sapiente corrupti iure vitae
-              tempora magnam laboriosam eligendi voluptatem? Quisquam similique officia eum? Ullam ex iste in officia eveniet
-              blanditiis quae iure ducimus explicabo dicta molestias, reiciendis quidem unde.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique omnis fugiat sapiente corrupti iure vitae
-              tempora magnam laboriosam eligendi voluptatem? Quisquam similique officia eum? Ullam ex iste in officia eveniet
-              blanditiis quae iure ducimus explicabo dicta molestias, reiciendis quidem unde.</p>-->
-          </div>
-        </div>
-
-        <div id="comments-section">
-          <!--Comments Section-->
-        </div>
-      </section>
-
-      <aside id="sidebar">
-        <h3>Sidebar Heading</h3>
-        <p>Sidebar 1</p>
-      </aside>
-    </div>
-
-    <footer>
-        <div id="left-footer">
-            <h3>Quick Links</h3>
-            <p>
-                <ul>
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="shopnow.html">Shop Now</a>
-                    </li>
-                    <!--<li>
-                        <a href="#">Privacy Policy</a>
-                    </li>-->
-                    <li>
-                        <a href="contactus.html">Contact Us</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <!--<li>
-                        <a href="#">Contact</a>
-                    </li>-->
-                </ul>
-            </p>
-        </div>
-
-        <div id="right-footer">
-            <h3>Follow us on</h3>
-            <div id="social-media-footer">
-                <ul>
-                    <li>
-                        <a href="https://www.instagram.com/cake_.n._bake/">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </li>
-                    <!--<li>
-                        <a href="#">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </li>-->
-                </ul>
-            </div>
-            <p>This website is developed by YOUNUZBN</p>
-        </div>
-    </footer>
-
+  <main class="container">
+    <header>
+          <figure class="center-img">
+              <img class="avatar"src="src/img/ally.jpeg" alt="">
+          </figure>
+          <h1 class="title">Welcome</h1>
+          <p class="center-text">"That he not busy being born is busy dying."<span> Bob Dylan</span></p>
+    </header>
+    <section>
+       <div class="social">
+          <a href="https://t.me/allythy" target="_blank"><i class="fa fa-telegram fa-2x"></i></a>
+          <a href="https://gitlab.com/allythy" target="_blank"><i class="fa fa-gitlab fa-2x"></i></a>
+          <a href="https://github.com/allythy" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://allythy.github.io" target="_blank"><i class="fa fa-laptop fa-2x"></i></a>
+       </div>
+    </section>
   </main>
 
   <script src="main.js"></script>
