--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="shopnow.html">Shop Now</a>
             </li>
             <li>
-                <a href="contactus.html">Contact Us</a>
+                <a href="contactus.html"target="_blank" >Contact Us</a>
             </li>
             <li>
                 <a href="index.html">about</a>
@@ -221,7 +221,7 @@
                         </li>-->
                     </ul>
                 </div>
-                <p>This website is developed by YOUNUZBN</p>
+                <p>This website is developed by younuzbn</p>
             </div>
         </footer>
 
