--- a/shopnow.html
+++ b/shopnow.html
@@ -268,7 +268,7 @@
                     </li>-->
                 </ul>
             </div>
-            <p>This website is developed by YOUNUZBN</p>
+            <p>This website is developed by younuzbn</p>
         </div>
     </footer>
 
