--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
                     </li>-->
                 </ul>
             </div>
-            <p>This website is developed by younuzbn</p>
+            <p>This website is developed by YOUNUZBN</p>
         </div>
     </footer>
 
