2 notification header added

--- a/index.html
+++ b/index.html
@@ -33,10 +33,24 @@
         </ul>
     </div>
 
-    <nav>
-        
+    <div class="container">
+        <div class="header">
+            <h6 id="lorem">To help protect customers and staff from the spread of COVID-19, We have put the following measures in place:
+                All deliveries are now contact free; we'll call you when we're outside, place your delivery at your door step and wait for you to collect it...! </h3>
         </div>
+    </div>
 
+   <div class="container">
+    <div class="headerr">
+        <h6 id="loremm">Open 7 days a Week 10am to 5pm
+            7356126678
+            or
+            7025035624
+            </h6>
+        </div>
+   </div>
+
+    <nav>
         <div id="logo-img">
             <a href="#">
                 <img src="img/logo.png" alt="Cake N Bake Vadakara">
@@ -66,7 +80,6 @@
                 </div>
             </li>
         </ul>
-        
     </nav>
 
     <div id="searchbox">
