--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="all.css">
     <title>Cake N Bake Vadakara</title>
 </head>
 
@@ -43,9 +44,9 @@
    <div class="container">
     <div class="headerr">
         <h6 id="loremm">Open 7 days a Week 10am to 5pm
-            7356126678
+            <a id="call" href="tel:+917356126678">07356126678</a> 
             or
-            7025035624
+            <a id="call" href="tel:+917025035624">07025035624</a> 
             </h6>
         </div>
    </div>
