--- a/contactus.html
+++ b/contactus.html
@@ -9,63 +9,83 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>CakeNBake</title>
+  <link rel="stylesheet" href="all.css">
+  <title>Contact Us</title>
 </head>
 
 <body>
-  <div id="slideout-menu">
-      <ul>
-          <li>
-              <a href="index.html">Home</a>
-          </li>
-          <li>
-              <a  href="shopnow.html">Shop Now</a>
-          </li>
-          <li>
-              <a href="contactus.html">Contact Us</a>
-          </li>
-          <li>
-              <a href="about.html">About</a>
-          </li>
-          <li>
-              <input type="text" placeholder="Search Here">
-          </li>
-      </ul>
-  </div>
+    <div id="slideout-menu">
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="shopnow.html">Shop Now</a>
+            </li>
+            <li>
+                <a href="contactus.html">Contact Us</a>
+            </li>
+            <li>
+                <a href="about.html">about</a>
+            </li>
+            <!--<li>
+                <input type="text" placeholder="Search Here">
+            </li>-->
+        </ul>
+    </div>
 
-  <nav>
-      <div id="logo-img">
-          <a href="#">
-              <img src="img/logo.png" alt="Cake N Bake Logo">
-          </a>
-      </div>
-      <div id="menu-icon">
-          <i class="fas fa-bars"></i>
-      </div>
-      <ul>
-          <li>
-              <a href="index.html">Home</a>
-          </li>
-          <li>
-              <a href="shopnow.html">Shop Now</a>
-          </li>
-          <li>
-              <a class="active" href="contactus.html">Contact Us</a>
-          </li>
-          <li>
-              <a href="about.html">About</a>
-          </li>
-          <li>
-              <div id="search-icon">
-                  <i class="fas fa-search"></i>
-              </div>
-          </li>
-      </ul>
-  </nav>
+    <div class="container">
+        <div class="header">
+            <h6 id="lorem">To help protect customers and staff from the spread of COVID-19, We have put the following measures in place:
+                All deliveries are now contact free; we'll call you when we're outside, place your delivery at your door step and wait for you to collect it...! </h3>
+        </div>
+    </div>
 
-  <div id="searchbox">
-      <input type="text" placeholder="Search Here">
-  </div>
+   <div class="container">
+    <div class="headerr">
+        <h6 id="loremm">Open 7 days a Week 10am to 5pm
+            <a id="call" href="tel:+917356126678">07356126678</a> 
+            or
+            <a id="call" href="tel:+917025035624">07025035624</a> 
+            </h6>
+        </div>
+   </div>
+
+    <nav>
+        <div id="logo-img">
+            <a href="#">
+                <img src="img/logo.png" alt="Cake N Bake Vadakara">
+            </a>
+        </div>
+
+
+        <div id="menu-icon">
+            <i class="fas fa-bars"></i>
+        </div>
+        <ul>
+            <li>
+                <a class="active" href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="shopnow.html">Shop Now</a>
+            </li>
+            <li>
+                <a href="contactus.html">Contact Us</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <div id="search-icon">
+                    <i class="fas fa-search"></i>
+                </div>
+            </li>
+        </ul>
+    </nav>
+
+    <div id="searchbox">
+        <input type="text" placeholder="Search Here">
+    </div>
 
   <main>
 
