--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="contactus.html">Contact Us</a>
             </li>
             <li>
-                <a href="index.html">about</a>
+                <a href="about.html">about</a>
             </li>
             <!--<li>
                 <input type="text" placeholder="Search Here">
